# rufus

./: .env.example  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  deployment.md  development.md
examples/: advanced_usage.py  basic_usage.py
src/api/: main.py  models.py
src/frontend/: app.py
src/rufus/: __init__.py  client.py  config.py  setup.py
src/rufus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rufus/agent/: __init__.py  ai_agent.py  prompt_templates.py
src/rufus/crawler/: __init__.py  async_crawler.py  base.py  js_crawler.py
src/rufus/extractors/: __init__.py  base.py  content.py  structured.py
src/rufus/processors/: __init__.py  cleaner.py  synthesizer.py
src/rufus/utils/: __init__.py  cache.py  rate_limiter.py  validators.py
tests/: conftest.py
tests/test_agent/: test_ai_agent.py
tests/test_crawler/: test_js_crawler.py
